; ModuleID = '/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_mont.c_BN_mod_mul_montgomery.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/bn/extr_bn_mont.c_BN_mod_mul_montgomery.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BN_mod_mul_montgomery(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @bn_mul_mont_fixed_top(i32* %12, i32* %13, i32* %14, i32* %15, i32* %16)
  store i32 %17, i32* %11, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @bn_correct_top(i32* %18)
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @bn_check_top(i32* %20)
  %22 = load i32, i32* %11, align 4
  ret i32 %22
}

declare dso_local i32 @bn_mul_mont_fixed_top(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @bn_correct_top(i32*) #1

declare dso_local i32 @bn_check_top(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
